test/message/source_map_throw_set_immediate.out
*uglify-throw-original.js:5
  throw Error('goodbye');
        ^

Error: goodbye
    at Hello *uglify-throw-original.js:5:9*
    at *uglify-throw-original.js:9:3*
    at processImmediate (node:internal/timers:*)
